Marking the wallet checkbox by default

--- a/src/loginsettingswidget.ui
+++ b/src/loginsettingswidget.ui
@@ -54,7 +54,13 @@
                 <cstring>kcfg_PasswordFromWallet</cstring>
             </property>
             <property name="text">
-                <string>Use KDE Wallet to store password</string>
+                <string>&amp;Use KDE Wallet to store password</string>
+            </property>
+            <property name="accel">
+                <string>Alt+U</string>
+            </property>
+            <property name="checked">
+                <bool>true</bool>
             </property>
         </widget>
         <spacer row="3" column="1">
