--- a/src/netsettingswidget.ui
+++ b/src/netsettingswidget.ui
@@ -15,68 +15,120 @@
     <property name="caption">
         <string>NetworkSettingsWidget</string>
     </property>
-    <grid>
+    <spacer>
         <property name="name">
-            <cstring>unnamed</cstring>
+            <cstring>spacer1</cstring>
         </property>
-        <widget class="KIntNumInput" row="0" column="0" rowspan="1" colspan="2">
-            <property name="name">
-                <cstring>kcfg_Interval</cstring>
-            </property>
-            <property name="label">
-                <string>Chec&amp;king Interval</string>
-            </property>
-            <property name="value">
-                <number>60</number>
-            </property>
-            <property name="minValue">
-                <number>10</number>
-            </property>
-            <property name="maxValue">
-                <number>86400</number>
-            </property>
-            <property name="suffix">
-                <string> seconds</string>
-            </property>
-        </widget>
-        <spacer row="2" column="1">
-            <property name="name">
-                <cstring>spacer1</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Vertical</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>100</height>
-                </size>
-            </property>
-        </spacer>
-        <widget class="QCheckBox" row="1" column="0">
-            <property name="name">
-                <cstring>kcfg_UseHTTPS</cstring>
-            </property>
-            <property name="text">
-                <string>&amp;Use https connections for checking mail</string>
-            </property>
-            <property name="accel">
-                <string>Alt+U</string>
-            </property>
-            <property name="checked">
-                <bool>true</bool>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>&lt;blockquote&gt;Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting.&lt;/blockquote&gt;</string>
-            </property>
-        </widget>
-    </grid>
+        <property name="orientation">
+            <enum>Vertical</enum>
+        </property>
+        <property name="sizeType">
+            <enum>Expanding</enum>
+        </property>
+        <property name="sizeHint">
+            <size>
+                <width>20</width>
+                <height>40</height>
+            </size>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>240</x>
+                <y>190</y>
+                <width>20</width>
+                <height>40</height>
+            </rect>
+        </property>
+    </spacer>
+    <widget class="KIntNumInput">
+        <property name="name">
+            <cstring>kcfg_Interval</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>20</x>
+                <y>10</y>
+                <width>360</width>
+                <height>47</height>
+            </rect>
+        </property>
+        <property name="label">
+            <string>Chec&amp;king Interval</string>
+        </property>
+        <property name="value">
+            <number>60</number>
+        </property>
+        <property name="minValue">
+            <number>10</number>
+        </property>
+        <property name="maxValue">
+            <number>86400</number>
+        </property>
+        <property name="suffix">
+            <string> seconds</string>
+        </property>
+    </widget>
+    <widget class="KIntNumInput">
+        <property name="name">
+            <cstring>kcfg_Snooze</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>20</x>
+                <y>80</y>
+                <width>360</width>
+                <height>47</height>
+            </rect>
+        </property>
+        <property name="label">
+            <string>Snoo&amp;ze Period</string>
+        </property>
+        <property name="value">
+            <number>1</number>
+        </property>
+        <property name="minValue">
+            <number>1</number>
+        </property>
+        <property name="maxValue">
+            <number>1440</number>
+        </property>
+        <property name="relativeValue">
+            <number>1</number>
+        </property>
+        <property name="suffix">
+            <string> minutes</string>
+        </property>
+    </widget>
+    <widget class="QCheckBox">
+        <property name="name">
+            <cstring>kcfg_UseHTTPS</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>20</x>
+                <y>150</y>
+                <width>280</width>
+                <height>22</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>&amp;Use https connections for checking mail</string>
+        </property>
+        <property name="accel">
+            <string>Alt+U</string>
+        </property>
+        <property name="checked">
+            <bool>true</bool>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>&lt;blockquote&gt;Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting.&lt;/blockquote&gt;</string>
+        </property>
+    </widget>
 </widget>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
+    <includehint>knuminput.h</includehint>
+    <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
 </includehints>
