--- a/src/appletsettingswidget.ui
+++ b/src/appletsettingswidget.ui
@@ -15,174 +15,154 @@
     <property name="caption">
         <string>AppletSettingsWidget</string>
     </property>
-    <widget class="QLayoutWidget">
+    <grid>
         <property name="name">
-            <cstring>layout1</cstring>
+            <cstring>unnamed</cstring>
         </property>
-        <property name="geometry">
-            <rect>
-                <x>1</x>
-                <y>1</y>
-                <width>420</width>
-                <height>383</height>
-            </rect>
-        </property>
-        <grid>
+        <widget class="QLayoutWidget" row="0" column="0">
             <property name="name">
-                <cstring>unnamed</cstring>
+                <cstring>layout1</cstring>
             </property>
-            <widget class="QGroupBox" row="2" column="0">
+            <grid>
                 <property name="name">
-                    <cstring>groupBox2</cstring>
+                    <cstring>unnamed</cstring>
                 </property>
-                <property name="title">
-                    <string>Debug</string>
-                </property>
-                <widget class="QCheckBox">
+                <widget class="QGroupBox" row="2" column="0">
                     <property name="name">
-                        <cstring>kcfg_AlertVersionChange</cstring>
+                        <cstring>groupBox2</cstring>
                     </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>11</x>
-                            <y>22</y>
-                            <width>368</width>
-                            <height>21</height>
-                        </rect>
+                    <property name="title">
+                        <string>Debug</string>
                     </property>
-                    <property name="text">
-                        <string>Display an alert if GMail version changes</string>
-                    </property>
+                    <grid>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QCheckBox" row="0" column="0">
+                            <property name="name">
+                                <cstring>kcfg_AlertVersionChange</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Displa&amp;y an alert if GMail version changes</string>
+                            </property>
+                            <property name="accel">
+                                <string>Alt+Y</string>
+                            </property>
+                        </widget>
+                    </grid>
                 </widget>
-            </widget>
-            <widget class="QGroupBox" row="3" column="0">
-                <property name="name">
-                    <cstring>groupBox3</cstring>
-                </property>
-                <property name="title">
-                    <string>Other</string>
-                </property>
-                <widget class="QCheckBox">
+                <widget class="QGroupBox" row="3" column="0">
                     <property name="name">
-                        <cstring>kcfg_DisplaySubjectOnSingleMail</cstring>
+                        <cstring>groupBox3</cstring>
                     </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>10</x>
-                            <y>20</y>
-                            <width>331</width>
-                            <height>22</height>
-                        </rect>
+                    <property name="title">
+                        <string>Other</string>
                     </property>
-                    <property name="text">
-                        <string>Display sub&amp;ject when only one new email arrives</string>
-                    </property>
-                    <property name="accel">
-                        <string>Alt+J</string>
-                    </property>
-                    <property name="checked">
-                        <bool>true</bool>
-                    </property>
-                    <property name="tristate">
-                        <bool>false</bool>
-                    </property>
+                    <grid>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QCheckBox" row="0" column="0">
+                            <property name="name">
+                                <cstring>kcfg_DisplaySubjectOnSingleMail</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Display sub&amp;ject when only one new email arrives</string>
+                            </property>
+                            <property name="accel">
+                                <string>Alt+J</string>
+                            </property>
+                            <property name="checked">
+                                <bool>true</bool>
+                            </property>
+                            <property name="tristate">
+                                <bool>false</bool>
+                            </property>
+                        </widget>
+                    </grid>
                 </widget>
-            </widget>
-            <widget class="QButtonGroup" row="1" column="0">
-                <property name="name">
-                    <cstring>buttonGroup1</cstring>
-                </property>
-                <property name="title">
-                    <string>Browser</string>
-                </property>
-                <widget class="KURLRequester">
+                <widget class="QButtonGroup" row="1" column="0">
                     <property name="name">
-                        <cstring>kcfg_CustomBrowser</cstring>
+                        <cstring>buttonGroup1</cstring>
                     </property>
-                    <property name="enabled">
-                        <bool>false</bool>
+                    <property name="title">
+                        <string>Browser</string>
                     </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>202</x>
-                            <y>79</y>
-                            <width>185</width>
-                            <height>24</height>
-                        </rect>
-                    </property>
-                    <property name="showLocalProtocol">
-                        <bool>true</bool>
-                    </property>
+                    <widget class="QLayoutWidget">
+                        <property name="name">
+                            <cstring>layout2</cstring>
+                        </property>
+                        <property name="geometry">
+                            <rect>
+                                <x>11</x>
+                                <y>23</y>
+                                <width>350</width>
+                                <height>84</height>
+                            </rect>
+                        </property>
+                        <grid>
+                            <property name="name">
+                                <cstring>unnamed</cstring>
+                            </property>
+                            <widget class="KURLRequester" row="2" column="1">
+                                <property name="name">
+                                    <cstring>kcfg_CustomBrowser</cstring>
+                                </property>
+                                <property name="enabled">
+                                    <bool>false</bool>
+                                </property>
+                                <property name="showLocalProtocol">
+                                    <bool>true</bool>
+                                </property>
+                            </widget>
+                            <spacer row="2" column="2">
+                                <property name="name">
+                                    <cstring>spacer9</cstring>
+                                </property>
+                                <property name="orientation">
+                                    <enum>Horizontal</enum>
+                                </property>
+                                <property name="sizeType">
+                                    <enum>Expanding</enum>
+                                </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
+                                </property>
+                            </spacer>
+                            <widget class="QRadioButton" row="0" column="0" rowspan="1" colspan="2">
+                                <property name="name">
+                                    <cstring>kcfg_UseDefaultBrowser</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>&amp;Use the default KDE browser</string>
+                                </property>
+                                <property name="accel">
+                                    <string>Alt+U</string>
+                                </property>
+                                <property name="checked">
+                                    <bool>true</bool>
+                                </property>
+                            </widget>
+                            <widget class="QRadioButton" row="1" column="0" rowspan="1" colspan="2">
+                                <property name="name">
+                                    <cstring>kcfg_UseAltBrowser</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>Use an alternative browser</string>
+                                </property>
+                            </widget>
+                        </grid>
+                    </widget>
                 </widget>
-                <spacer>
+                <spacer row="4" column="0">
                     <property name="name">
-                        <cstring>spacer4</cstring>
+                        <cstring>spacer3</cstring>
                     </property>
                     <property name="orientation">
-                        <enum>Horizontal</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>185</width>
-                            <height>20</height>
-                        </size>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>11</x>
-                            <y>81</y>
-                            <width>185</width>
-                            <height>20</height>
-                        </rect>
-                    </property>
-                </spacer>
-                <widget class="QRadioButton">
-                    <property name="name">
-                        <cstring>kcfg_UseAltBrowser</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>11</x>
-                            <y>51</y>
-                            <width>376</width>
-                            <height>22</height>
-                        </rect>
-                    </property>
-                    <property name="text">
-                        <string>Use an alternative browser</string>
-                    </property>
-                </widget>
-                <widget class="QRadioButton">
-                    <property name="name">
-                        <cstring>kcfg_UseDefaultBrowser</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>11</x>
-                            <y>23</y>
-                            <width>376</width>
-                            <height>22</height>
-                        </rect>
-                    </property>
-                    <property name="text">
-                        <string>&amp;Use the default KDE browser</string>
-                    </property>
-                    <property name="accel">
-                        <string>Alt+U</string>
-                    </property>
-                    <property name="checked">
-                        <bool>true</bool>
-                    </property>
-                </widget>
-                <spacer>
-                    <property name="name">
-                        <cstring>spacer9</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Horizontal</enum>
+                        <enum>Vertical</enum>
                     </property>
                     <property name="sizeType">
                         <enum>Expanding</enum>
@@ -193,67 +173,42 @@
                             <height>20</height>
                         </size>
                     </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>390</x>
-                            <y>80</y>
-                            <width>20</width>
-                            <height>20</height>
-                        </rect>
-                    </property>
                 </spacer>
-            </widget>
-            <spacer row="4" column="0">
-                <property name="name">
-                    <cstring>spacer3</cstring>
-                </property>
-                <property name="orientation">
-                    <enum>Vertical</enum>
-                </property>
-                <property name="sizeType">
-                    <enum>Expanding</enum>
-                </property>
-                <property name="sizeHint">
-                    <size>
-                        <width>20</width>
-                        <height>20</height>
-                    </size>
-                </property>
-            </spacer>
-            <widget class="QGroupBox" row="0" column="0">
-                <property name="name">
-                    <cstring>groupBox1</cstring>
-                </property>
-                <property name="title">
-                    <string>Tray Icon</string>
-                </property>
-                <vbox>
+                <widget class="QGroupBox" row="0" column="0">
                     <property name="name">
-                        <cstring>unnamed</cstring>
+                        <cstring>groupBox1</cstring>
                     </property>
-                    <widget class="QCheckBox">
+                    <property name="title">
+                        <string>Tray Icon</string>
+                    </property>
+                    <vbox>
                         <property name="name">
-                            <cstring>kcfg_AllowLeftClickOpen</cstring>
+                            <cstring>unnamed</cstring>
                         </property>
-                        <property name="text">
-                            <string>Open &amp;browser to Gmail on left click</string>
-                        </property>
-                        <property name="accel">
-                            <string>Alt+B</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>kcfg_CatchAccidentalClick</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Catch accidental left clicks when launching the browser</string>
-                        </property>
-                    </widget>
-                </vbox>
-            </widget>
-        </grid>
-    </widget>
+                        <widget class="QCheckBox">
+                            <property name="name">
+                                <cstring>kcfg_AllowLeftClickOpen</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Open &amp;browser to Gmail on left click</string>
+                            </property>
+                            <property name="accel">
+                                <string>Alt+B</string>
+                            </property>
+                        </widget>
+                        <widget class="QCheckBox">
+                            <property name="name">
+                                <cstring>kcfg_CatchAccidentalClick</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Catch accidental left clicks when launching the browser</string>
+                            </property>
+                        </widget>
+                    </vbox>
+                </widget>
+            </grid>
+        </widget>
+    </grid>
 </widget>
 <connections>
     <connection>
